In one beautiful moment...

--- a/index.html
+++ b/index.html
@@ -92,23 +92,23 @@
 
                         <div class="contactInf">
                             <h2>You can write me here:</h2>
-                            <p><span class="iconSize"><i class="fa fa-envelope" aria-hidden="true"></i></span> v.dovnich@gmail.com</p>
+                            <p><span class="iconSize"><a href="mailto:v.dovnich@gmail.com"><i class="fa fa-envelope" aria-hidden="true"></i></a></span>v.dovnich@gmail.com</p>
                         </div>
 
                         <div class="contactInf">
                             <h2>or here:</h2>
-                            <p><span class="iconSize"><i class="fa fa-facebook-official" aria-hidden="true"></i></span>facebook.com/v.dovnich</p>
+                            <p><span class="iconSize"><i class="fa fa-facebook-official" aria-hidden="true"></i></span><a href="">facebook.com/v.dovnich</a></p>
                         </div>
                     </div>
                     <div class="down">
                         <h5>Also, you can find me...</h5>
-                        <div class="social"><i class="fa fa-linkedin-square" aria-hidden="true"></i>
+                        <div class="social"><a><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
                         </div>
-                        <div class="social"><i class="fa fa-github" aria-hidden="true"></i>
+                            <div class="social"><a><i class="fa fa-github" aria-hidden="true"></i></a>
                         </div>
-                        <div class="social"><i class="fa fa-vk" aria-hidden="true"></i>
+                            <div class="social"><a><i class="fa fa-vk" aria-hidden="true"></i></a>
                         </div>
-                        <div class="social"><i class="fa fa-google-plus-official" aria-hidden="true"></i>
+                            <div class="social"><a><i class="fa fa-google-plus-official" aria-hidden="true"></i></a>
                         </div>
                     </div>
                     <hr>
@@ -118,7 +118,7 @@
                     <div class="lang">Polish</div>
                     <div class="lang">Ukrainian</div>
                     <hr>
-                    <h5>Download pdf version of my CV you can here:</h5>
+                    <h5>Download PDF version of my CV you can here:</h5>
                     <span class="glyphicon glyphicon-save" aria-hidden="true"></span> 
                 </section>
             </div>
@@ -137,7 +137,7 @@
                         </div>
                         <h3>About</h3>
                         <div class="toggle-wrap">
-                            <p>In this page, I'm trying to make some hybrid between my CV and portfolio, and if you read this please estimate it and give me a feedback. Now I'm studying and trying to get a ticket to IT sphere. In this place, I want to collect all my sketches and projects that I made or making now. And also I want highlight topics, articles, and thoughts that I find important.</p>
+                            <p>In one beautiful moment I understood that I can't put everything that I want in simple CV, so I decide to create this page and in the end I got this hybrid between CV and portfolio. If you have any remarks about this page or you will find a mistake - please give me <a href="">feedback</a>! Now I'm studying and trying to get the job in IT sphere. In this place I want to collect all my sketches and projects that I made or making now. And also I want highlight topics, articles, and thoughts that I found important.</p>
                             <p><span>So, let's start our acquaintance!</span>
                             </p>
                         </div>
@@ -423,8 +423,6 @@
                             <p>For russian-speaking segment:</p>
                             <ul>
                                 <li><a href="http://www.metanit.com/" target="_blank">www.metanit.com</a> - Данный сайт посвящен различным языкам и технологиям программирования, компьютерам, мобильным платформам и ИТ-технологиям. Здесь будут выкладываться различные руководства и учебные материалы, статьи и примеры.
-                                </li>
-                                <li><a href="http://mycsharp.ru/" target="_blank">www.mycsharp.ru</a> - Уроки программирования с нуля. C# для чайников.
                                 </li>
                             </ul>
                             <p>I will continue to making this list wider...</p>
