--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Navigation -->
     <nav class="myNav">
         <div class="">
-            <a href="#" class="myBrand" onclick="reloadFunction()">
+            <a href="https://github.com/VDSnuff" target="_blank" class="myBrand">
                 <i class="fa fa-chevron-left" aria-hidden="true"></i><i class="fa fa-leaf" aria-hidden="true"></i><i class="fa fa-chevron-right" aria-hidden="true"></i>
             </a>
             <div class="dropdown">
@@ -97,18 +97,19 @@
 
                         <div class="contactInf">
                             <h2>or here:</h2>
-                            <p><span class="iconSize"><i class="fa fa-facebook-official" aria-hidden="true"></i></span><a href="">facebook.com/v.dovnich</a></p>
+                            <p><span class="iconSize"><i class="fa fa-facebook-official" aria-hidden="true"></i></span><a href="https://www.facebook.com/v.dovnich" target="_blank">facebook.com/v.dovnich</a>
+                            </p>
                         </div>
                     </div>
                     <div class="down">
                         <h5>Also, you can find me...</h5>
-                        <div class="social"><a><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+                        <div class="social"><a href="https://www.linkedin.com/in/viacheslav-dovnich-a2b8427a" target="_blank"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
                         </div>
-                            <div class="social"><a><i class="fa fa-github" aria-hidden="true"></i></a>
+                        <div class="social"><a href="https://github.com/VDSnuff" target="_blank"><i class="fa fa-github" aria-hidden="true"></i></a>
                         </div>
-                            <div class="social"><a><i class="fa fa-vk" aria-hidden="true"></i></a>
+                        <div class="social"><a href="https://vk.com/v.snuff" target="_blank"><i class="fa fa-vk" aria-hidden="true"></i></a>
                         </div>
-                            <div class="social"><a><i class="fa fa-google-plus-official" aria-hidden="true"></i></a>
+                        <div class="social"><a href="https://plus.google.com/u/0/107437013632742435875" target="_blank"><i class="fa fa-google-plus-official" aria-hidden="true"></i></a>
                         </div>
                     </div>
                     <hr>
@@ -118,7 +119,7 @@
                     <div class="lang">Polish</div>
                     <div class="lang">Ukrainian</div>
                     <hr>
-                    <h5>Download PDF version of my CV you can here:</h5>
+                    <h5><a href="" target="_blank">Download PDF version of my CV you can here:</a></h5>
                     <span class="glyphicon glyphicon-save" aria-hidden="true"></span> 
                 </section>
             </div>
@@ -137,7 +138,7 @@
                         </div>
                         <h3>About</h3>
                         <div class="toggle-wrap">
-                            <p>In one beautiful moment I understood that I can't put everything that I want in simple CV, so I decide to create this page and in the end I got this hybrid between CV and portfolio. If you have any remarks about this page or you will find a mistake - please give me <a href="">feedback</a>! Now I'm studying and trying to get the job in IT sphere. In this place I want to collect all my sketches and projects that I made or making now. And also I want highlight topics, articles, and thoughts that I found important.</p>
+                            <p>In one beautiful moment I understood that I can't put everything that I want in simple CV, so I decide to create this page and in the end I got this hybrid between CV and portfolio. If you have any remarks about this page or you will find a mistake - please give me <a href="https://www.facebook.com/v.dovnich" target="_blank">feedback!</a> Now I'm studying and trying to get the job in IT sphere. In this place I want to collect all my sketches and projects that I made or making now. And also I want highlight topics, articles, and thoughts that I found important.</p>
                             <p><span>So, let's start our acquaintance!</span>
                             </p>
                         </div>
@@ -156,7 +157,7 @@
                         <div class="b2">
                             <h3>Professional experience</h3>
                             <ul>
-                                <li><em>2016</em> – <a>Text United GmbH.</a>
+                                <li><em>2016</em> – <a href="https://www.textunited.com/" target="_blank">Text United GmbH.</a>
                                 </li>
                                 <li><em>Position:</em> Intern.</li>
                                 <li><em>Project:</em>
@@ -173,7 +174,7 @@
                             <p>My first meet with the IT world was in 2010 (while I was working as a sales manager and partly took part in the administrating of the website). And finally, I decided to choose career of programming in 2014 after executing the projects together with specialists from the IT company.</p>
                             <hr>
                             <ul>
-                                <li><em>2013–2014</em> – <a>Varenichnaya Katyusha LLC.</a>
+                                <li><em>2013–2014</em> – <a href="http://katysha.com.ua/" target="_blank">Varenichnaya Katyusha LLC.</a>
                                 </li>
                                 <li><em>Position:</em> Chief marketing manager, marketing manager.</li>
                             </ul>
@@ -182,7 +183,7 @@
                                 <li>My work during the study:</li>
                                 <li>
                                     <ul>
-                                        <li><em>2012–2013</em> – <a>TK-Domashniy tekstyl LLC,</a> on storekeeper position.</li>
+                                        <li><em>2012–2013</em> – <a href="http://www.tk-domtex.com.ua/en/" target="_blank">TK-Domashniy tekstyl LLC,</a> on storekeeper position.</li>
                                         <li><em>2010–2011</em> – Tverdytsya LLC, on sales manager position.</li>
                                     </ul>
                                 </li>
@@ -204,21 +205,39 @@
                         <div class="b4">
                             <h3 id="Computer">Computer skills</h3>
                             <ul>
-                                <li><em>Programming:</em> C#, JavaScript, jQuery, T-SQL, HTLM, CSS, Bootstrap;</li>
-                                <li><em>Next steps:</em> AJAX, AngularJS, Node.js;</li>
-                                <li><em>Familiar with following .NET components:</em> ASP.NET MVC, WCF, WinForms, WPF, ADO.NET, Entity Framework;</li>
+                                <li><em>Programming:</em> C#, JavaScript, jQuery, jQuery-AJAX, HTLM, CSS, Bootstrap, T-SQL;</li>
+                                <li><em>Next steps:</em> ASP.NET MVC, AngularJS, Node.js;</li>
+                                <li><em>Familiar with following .NET components:</em> WinForms, WPF, WCF, ADO.NET, Entity Framework;</li>
                             </ul>
                             <hr>
                             <div class="imgWall text-center">
-                                <img src="img/Microsoft_logo_(2012).svg" alt="Microsoft logo">
-                                <img src="img/Microsoft_SQL_Server_Logo.svg" alt="Microsoft SQL Server Logo">
-                                <img src="img/Unofficial_JavaScript_logo_2.svg" alt="JavaScript logo">
-                                <img src="img/JQuery_logo.svg" alt="JQuery logo">
-                                <img src="img/angular-icon.svg" alt="Angular logo">
-                                <img src="img/HTML5_logo_and_wordmark.svg" alt="HTML5 logo">
-                                <img src="img/CSS3_logo_and_wordmark.svg" alt="CSS3 logo">
-                                <img src="img/Boostrap_logo.svg" alt="Boostrap logo">
-                                <img src="img/Node.js_logo_2015.svg" alt="Node.js logo">
+                                <a href="https://www.microsoft.com/" target="_blank">
+                                    <img src="img/Microsoft_logo_(2012).svg" alt="Microsoft logo">
+                                </a>
+                                <a href="https://www.microsoft.com/" target="_blank">
+                                    <img src="img/Microsoft_SQL_Server_Logo.svg" alt="Microsoft SQL Server Logo">
+                                </a>
+                                <a href="https://en.wikipedia.org/wiki/JavaScript" target="_blank">
+                                    <img src="img/Unofficial_JavaScript_logo_2.svg" alt="JavaScript logo">
+                                </a>
+                                <a href="https://jquery.com/" target="_blank">
+                                    <img src="img/JQuery_logo.svg" alt="JQuery logo">
+                                </a>
+                                <a href="https://angular.io/" target="_blank">
+                                    <img src="img/angular-icon.svg" alt="Angular logo">
+                                </a>
+                                <a href="https://en.wikipedia.org/wiki/HTML5" target="_blank">
+                                    <img src="img/HTML5_logo_and_wordmark.svg" alt="HTML5 logo">
+                                </a>
+                                <a href="https://en.wikipedia.org/wiki/Cascading_Style_Sheets" target="_blank">
+                                    <img src="img/CSS3_logo_and_wordmark.svg" alt="CSS3 logo">
+                                </a>
+                                <a href="http://getbootstrap.com/" target="_blank">
+                                    <img src="img/Bootstrap_logo.svg" alt="Bootstrap logo">
+                                </a>
+                                <a href="https://nodejs.org/en/" target="_blank">
+                                    <img src="img/Node.js_logo_2015.svg" alt="Node.js logo">
+                                </a>
                             </div>
                             <hr>
                             <ul class="skills">
@@ -254,12 +273,12 @@
                             <h4>University<i class="fa fa-university" aria-hidden="true"></i></h4>
 
                             <ul>
-                                <li><em>2014–2017</em> – <a>Wyższa Szkoła Gospodarki</a> w Bydgoszczy.</li>
+                                <li><em>2014–2017</em> – <a href="http://www.wsg.byd.pl/strona-glowna.1.html" target="_blank">Wyższa Szkoła Gospodarki</a> w Bydgoszczy.</li>
                                 <li><em>Specialization</em> – programming and web technologies.</li>
                             </ul>
 
                             <ul>
-                                <li><em>2014</em> – Training center <a>“Success”</a>.</li>
+                                <li><em>2014</em> – Training center <a href="http://www.uspeh.ua/" target="_blank">“Success”</a>.</li>
                                 <li><em>Specialization</em> - web development.</li>
                             </ul>
 
@@ -271,7 +290,8 @@
                             <hr>
 
                             <ul>
-                                <li><em>2010–2012</em> - Inter-Regional Academy of Personnel Management.</li>
+                                <li><em>2010–2012</em> - <a href="http://maup.com.ua/" target="_blank">Inter-Regional Academy of Personnel Management.</a>
+                                </li>
                                 <li>
                                     <em>Specialization</em> - commercial and labor law.
                                 </li>
@@ -283,7 +303,8 @@
                             <p></p>
 
                             <ul>
-                                <li><em>2006–2010</em> - Inter-Regional Academy of Personnel Management Economic Legal Technical–School.</li>
+                                <li><em>2006–2010</em> - <a href="http://maup.com.ua/" target="_blank">Inter-Regional Academy of Personnel Management Economic Legal Technical–School.</a>
+                                </li>
                                 <li>
                                     <em>Specialization</em> – law.
                                 </li>
@@ -333,7 +354,7 @@
                             <ul class="withMarkup">
                                 <li>Jimmy Diresta <a href="https://www.youtube.com/user/jimmydiresta" target="_blank">channel</a>.
                                 </li>
-                                <li>Bob from "I Like To Make Stuff" <a href="https://www.youtube.com/user/iliketomakestuffcom">channel.</a>
+                                <li>Bob from "I Like To Make Stuff" <a href="https://www.youtube.com/user/iliketomakestuffcom" target="_blank">channel.</a>
                                 </li>
                                 <li>Boston Dynamics and their <a href="https://www.youtube.com/channel/UC7vVhkEfw4nOGp8TyDk7RcQ" target="_blank">robots.</a>
                                 </li>
@@ -362,33 +383,41 @@
                             <div class="container-fluid">
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                                        <h5>Project One</h5>
+                                        <h5><a href="https://github.com/VDSnuff/KillClonesTabs" target="_blank">Kill Clones Tabs</a></h5>
                                         <figure>
-                                            <img class="img-responsive center-block" src="img/download.png" alt="Personal projects">
-                                            <figcaption class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Temporibus deleniti repudiandae vitae distinctio deserunt doloremque, velit eligendi odit aspernatur. Totam doloremque neque illo excepturi dolorum?</figcaption>
+                                            <a href="https://github.com/VDSnuff/KillClonesTabs" target="_blank">
+                                                <img class="img-responsive center-block" src="img/download.png" alt="Personal projects">
+                                            </a>
+                                            <figcaption class="text-center">This extension compares opened browser tabs and highlight duplicates. Optionally it can close all duplicates tabs.</figcaption>
                                         </figure>
                                     </div>
                                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                                        <h5>Project Two</h5>
+                                        <h5><a href="https://VDSnuff.github.io/01_Project_WeBuildBrand/WeBuildBrand.html" target="_blank">Template "We Build Brand"</a></h5>
                                         <figure>
-                                            <img class="img-responsive center-block" src="img/download.png" alt="Personal projects">
-                                            <figcaption class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere magnam veritatis quos sunt perspiciatis recusandae mollitia odio repellendus sequi nam.</figcaption>
+                                            <a href="https://VDSnuff.github.io/01_Project_WeBuildBrand/WeBuildBrand.html" target="_blank">
+                                                <img class="img-responsive center-block" src="img/download.png" alt="Personal projects">
+                                            </a>
+                                            <figcaption class="text-center">It was a test task and my first experience with Bootstrap framework(Template design took from the space of internet).</figcaption>
                                         </figure>
                                     </div>
                                 </div>
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                                        <h5>Project Three</h5>
+                                        <h5><a href="https://VDSnuff.github.io/03_Project_KonradZuse/KonradZuse.html" target="_blank">Konrad Zuse tribute page.</a></h5>
                                         <figure>
-                                            <img class="img-responsive center-block" src="img/download.png" alt="Personal projects">
-                                            <figcaption class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iste, adipisci, excepturi autem voluptates, saepe non sunt quidem facilis quisquam quod suscipit! Totam est, nisi necessitatibus!</figcaption>
+                                            <a href="" target="_blank">
+                                                <img class="img-responsive center-block" src="img/download.png" alt="Personal projects">
+                                            </a>
+                                            <figcaption class="text-center">One more Bootstrap experiment</figcaption>
                                         </figure>
                                     </div>
                                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                                        <h5>Project Four</h5>
+                                        <h5><a href="https://github.com/VDSnuff/VKDownloader" target="_blank">VK Downloader</a></h5>
                                         <figure>
-                                            <img class="img-responsive center-block" src="img/download.png" alt="Personal projects">
-                                            <figcaption class="text-center">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis eveniet exercitationem, magni! Molestias sequi provident ducimus corporis fugit, incidunt praesentium velit, est nisi doloremque reprehenderit.</figcaption>
+                                            <a href="https://github.com/VDSnuff/VKDownloader" target="_blank">
+                                                <img class="img-responsive center-block" src="img/download.png" alt="Personal projects">
+                                            </a>
+                                            <figcaption class="text-center">The program that works with VK(social networking) API.</figcaption>
                                         </figure>
                                     </div>
                                 </div>
