Toggle hide section

--- a/index.html
+++ b/index.html
@@ -137,13 +137,13 @@
                             </div>
                         </div>
                         <h3>About</h3>
-                        <div class="toggle-wrap">
+                        <div class="toggle-wrap" id="hide1">
                             <p>In one beautiful moment I understood that I can't put everything that I want in simple CV, so I decide to create this page and in the end I got this hybrid between CV and portfolio. If you have any remarks about this page or you will find a mistake - please give me <a href="https://www.facebook.com/v.dovnich" target="_blank">feedback!</a> Now I'm studying and trying to get the job in IT sphere. In this place I want to collect all my sketches and projects that I made or making now. And also I want highlight topics, articles, and thoughts that I found important.</p>
                             <p><span>So, let's start our acquaintance!</span>
                             </p>
                         </div>
                     </article>
-                    <div class="downArrow"><a class="toggle-trigger"><i onclick="funcUpDownArrow(this.id)" class="fa fa-chevron-up" aria-hidden="true"></i></a>
+                    <div class="downArrow" id="hideTrigger1" ><a class="toggle-trigger"><i class="fa fa-chevron-up" aria-hidden="true"></i></a>
                     </div>
 
                     <article id="Professional">
@@ -154,8 +154,9 @@
                                 <img src="img/quarter.png" alt="quarter">
                             </div>
                         </div>
-                        <div class="b2">
+                        
                             <h3>Professional experience</h3>
+                            <div id="hide2">
                             <ul>
                                 <li><em>2016</em> – <a href="https://www.textunited.com/" target="_blank">Text United GmbH.</a>
                                 </li>
@@ -191,7 +192,7 @@
                             <p></p>
                         </div>
                     </article>
-                    <div class="downArrow"><i id="a2" onclick="funcUpDownArrow(this.id)" class="fa fa-chevron-up" aria-hidden="true"></i>
+                    <div class="downArrow" id="hideTrigger2"><i class="fa fa-chevron-up" aria-hidden="true"></i>
                     </div>
 
                     <article>
@@ -202,10 +203,11 @@
                                 <img src="img/laptop-icon.png" alt="laptop-icon">
                             </div>
                         </div>
-                        <div class="b4">
+                       
                             <h3 id="Computer">Computer skills</h3>
+                             <div id="hide3">
                             <ul>
-                                <li><em>Programming:</em> C#, JavaScript, jQuery, jQuery-AJAX, HTLM, CSS, Bootstrap, T-SQL;</li>
+                                <li><em>Programming:</em> C#, T-SQL, JavaScript, jQuery, AJAX, HTLM, CSS, XML, Bootstrap;</li>
                                 <li><em>Next steps:</em> ASP.NET MVC, AngularJS, Node.js;</li>
                                 <li><em>Familiar with following .NET components:</em> WinForms, WPF, WCF, ADO.NET, Entity Framework;</li>
                             </ul>
@@ -256,11 +258,11 @@
                             </ul>
                         </div>
                     </article>
-                    <div class="downArrow" id="Education"><i id="a4" onclick="funcUpDownArrow(this.id)" class="fa fa-chevron-up" aria-hidden="true"></i>
+                    <div class="downArrow" id="hideTrigger3"><i class="fa fa-chevron-up" aria-hidden="true"></i>
                     </div>
 
                     <!-- Education section -->
-                    <article>
+                    <article id="Education">
                         <div class="redLine">
                             <div class="mSquareL">
                             </div>
@@ -268,8 +270,8 @@
                                 <img src="img/graduate-cap.png" alt="graduate-cap">
                             </div>
                         </div>
-                        <div class="b3">
                             <h3>Education</h3>
+                            <div id="hide4">
                             <h4>University<i class="fa fa-university" aria-hidden="true"></i></h4>
 
                             <ul>
@@ -336,10 +338,10 @@
                         </div>
                         <!-- End -->
                     </article>
-                    <div class="downArrow" id="Interests"><i id="a3" onclick="funcUpDownArrow(this.id)" class="fa fa-chevron-up" aria-hidden="true"></i>
+                    <div class="downArrow" id="hideTrigger4"><i class="fa fa-chevron-up" aria-hidden="true"></i>
                     </div>
 
-                    <article>
+                    <article id="Interests">
                         <div class="redLine">
                             <div class="mSquareL">
                             </div>
@@ -347,8 +349,8 @@
                                 <img src="img/rocket-black-shape.png" alt="rocket-black-shape">
                             </div>
                         </div>
-                        <div class="b5">
                             <h3>Interests and hobbies</h3>
+                            <div id="hide5">
                             <p>I have a wide worldview, and this is the reason why I interesting in many different areas. I try myself in different branches and have many different hobbies, the list varies from time to time, but there are still the things that inspire me and give me a good mood from day to day.</p>
                             <p>For example, making stuff like this guys:</p>
                             <ul class="withMarkup">
@@ -366,10 +368,10 @@
                             <p>Something of this I want to duplicate some just inspires me to new accomplishments but all of this are part of my passion.</p>
                         </div>
                     </article>
-                    <div class="downArrow" id="Personal"><i id="a5" onclick="funcUpDownArrow(this.id)" class="fa fa-chevron-up" aria-hidden="true"></i>
+                    <div class="downArrow" id="hideTrigger5"><i class="fa fa-chevron-up" aria-hidden="true"></i>
                     </div>
 
-                    <article>
+                    <article id="Personal">
                         <div class="redLine">
                             <div class="mSquareL">
                             </div>
@@ -377,8 +379,8 @@
                                 <img src="img/user-silhouette.png" alt="user-silhouette">
                             </div>
                         </div>
-                        <div class="b6">
                             <h3>Personal projects</h3>
+                            <div id="hide6">
                             <p>In this part, I want to highlight a project that I had already embodied or I on my way to do this.</p>
                             <div class="container-fluid">
                                 <div class="row">
@@ -425,10 +427,10 @@
                             <p></p>
                         </div>
                     </article>
-                    <div class="downArrow" id="Recommend"><i id="a6" onclick="funcUpDownArrow(this.id)" class="fa fa-chevron-up" aria-hidden="true"></i>
+                    <div class="downArrow" id="hideTrigger6" ><i class="fa fa-chevron-up" aria-hidden="true"></i>
                     </div>
 
-                    <article class="sss">
+                    <article id="Recommend">
                         <div class="redLine">
                             <div class="mSquareL">
 
@@ -437,8 +439,8 @@
                                 <img src="img/thumb-up-filled-gesture.png" alt="thumb-up-filled-gesture">
                             </div>
                         </div>
-                        <div class="b7">
                             <h3>I'm recommend</h3>
+                            <div id="hide7">
                             <p>
                                 On the internet, there are a lot of resources and everyone can lost among them. I spent a lot of time before extracted something useful. Maybe some of this find be helpful for you to...</p>
                             <ul>
@@ -457,7 +459,7 @@
                             <p>I will continue to making this list wider...</p>
                         </div>
                     </article>
-                    <div class="downArrow"><i id="a7" onclick="funcUpDownArrow(this.id)" class="fa fa-chevron-up" aria-hidden="true"></i>
+                    <div class="downArrow" id="hideTrigger7"><i class="fa fa-chevron-up" aria-hidden="true"></i>
                     </div>
                 </section>
             </div>
