--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                     <div class="lang">Polish</div>
                     <div class="lang">Ukrainian</div>
                     <hr>
-                    <h5><a href="" target="_blank">Download PDF version of my CV you can here:</a></h5>
-                    <span class="glyphicon glyphicon-save" aria-hidden="true"></span> 
+                    <h5>Download PDF version of my CV you can here:</h5>
+                    <a href="" target="_blank"><span class="glyphicon glyphicon-save" aria-hidden="true"></span></a> 
                 </section>
             </div>
 
