--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                     <div class="lang">Ukrainian</div>
                     <hr>
                     <h5>Download PDF version of my CV you can here:</h5>
-                    <a href="" target="_blank"><span class="glyphicon glyphicon-save" aria-hidden="true"></span></a> 
+                    <a href="resources/CV_Viacheslav_Dovnich.pdf" target="_blank"><span class="glyphicon glyphicon-save" aria-hidden="true"></span></a> 
                 </section>
             </div>
 
@@ -143,7 +143,7 @@
                             </p>
                         </div>
                     </article>
-                    <div class="downArrow" id="hideTrigger1" ><a class="toggle-trigger"><i class="fa fa-chevron-up" aria-hidden="true"></i></a>
+                    <div class="downArrow" id="hideTrigger1"><a class="toggle-trigger"><i class="fa fa-chevron-up" aria-hidden="true"></i></a>
                     </div>
 
                     <article id="Professional">
@@ -154,9 +154,9 @@
                                 <img src="img/quarter.png" alt="quarter">
                             </div>
                         </div>
-                        
-                            <h3>Professional experience</h3>
-                            <div id="hide2">
+
+                        <h3>Professional experience</h3>
+                        <div id="hide2">
                             <ul>
                                 <li><em>2016</em> – <a href="https://www.textunited.com/" target="_blank">Text United GmbH.</a>
                                 </li>
@@ -203,9 +203,9 @@
                                 <img src="img/laptop-icon.png" alt="laptop-icon">
                             </div>
                         </div>
-                       
-                            <h3 id="Computer">Computer skills</h3>
-                             <div id="hide3">
+
+                        <h3 id="Computer">Computer skills</h3>
+                        <div id="hide3">
                             <ul>
                                 <li><em>Programming:</em> C#, T-SQL, JavaScript, jQuery, AJAX, HTLM, CSS, XML, Bootstrap;</li>
                                 <li><em>Next steps:</em> ASP.NET MVC, AngularJS, Node.js;</li>
@@ -270,8 +270,8 @@
                                 <img src="img/graduate-cap.png" alt="graduate-cap">
                             </div>
                         </div>
-                            <h3>Education</h3>
-                            <div id="hide4">
+                        <h3>Education</h3>
+                        <div id="hide4">
                             <h4>University<i class="fa fa-university" aria-hidden="true"></i></h4>
 
                             <ul>
@@ -349,8 +349,8 @@
                                 <img src="img/rocket-black-shape.png" alt="rocket-black-shape">
                             </div>
                         </div>
-                            <h3>Interests and hobbies</h3>
-                            <div id="hide5">
+                        <h3>Interests and hobbies</h3>
+                        <div id="hide5">
                             <p>I have a wide worldview, and this is the reason why I interesting in many different areas. I try myself in different branches and have many different hobbies, the list varies from time to time, but there are still the things that inspire me and give me a good mood from day to day.</p>
                             <p>For example, making stuff like this guys:</p>
                             <ul class="withMarkup">
@@ -379,16 +379,16 @@
                                 <img src="img/user-silhouette.png" alt="user-silhouette">
                             </div>
                         </div>
-                            <h3>Personal projects</h3>
-                            <div id="hide6">
+                        <h3>Personal projects</h3>
+                        <div id="hide6">
                             <p>In this part, I want to highlight a project that I had already embodied or I on my way to do this.</p>
-                            <div class="container-fluid">
+                            <div class="container-fluid persProjBg">
                                 <div class="row">
                                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
                                         <h5><a href="https://github.com/VDSnuff/KillClonesTabs" target="_blank">Kill Clones Tabs</a></h5>
                                         <figure>
                                             <a href="https://github.com/VDSnuff/KillClonesTabs" target="_blank">
-                                                <img class="img-responsive center-block" src="img/download.png" alt="Personal projects">
+                                                <img class="img-responsive center-block" src="img/octopus.png" alt="Personal projects">
                                             </a>
                                             <figcaption class="text-center">This extension compares opened browser tabs and highlight duplicates. Optionally it can close all duplicates tabs.</figcaption>
                                         </figure>
@@ -397,7 +397,7 @@
                                         <h5><a href="https://VDSnuff.github.io/01_Project_WeBuildBrand/WeBuildBrand.html" target="_blank">Template "We Build Brand"</a></h5>
                                         <figure>
                                             <a href="https://VDSnuff.github.io/01_Project_WeBuildBrand/WeBuildBrand.html" target="_blank">
-                                                <img class="img-responsive center-block" src="img/download.png" alt="Personal projects">
+                                                <img class="img-responsive center-block" src="img/WeBuildBrand.png" alt="Personal projects">
                                             </a>
                                             <figcaption class="text-center">It was a test task and my first experience with Bootstrap framework(Template design took from the space of internet).</figcaption>
                                         </figure>
@@ -408,7 +408,7 @@
                                         <h5><a href="https://VDSnuff.github.io/03_Project_KonradZuse/KonradZuse.html" target="_blank">Konrad Zuse tribute page.</a></h5>
                                         <figure>
                                             <a href="" target="_blank">
-                                                <img class="img-responsive center-block" src="img/download.png" alt="Personal projects">
+                                                <img class="img-responsive center-block" src="img/KonradZuse.png" alt="Personal projects">
                                             </a>
                                             <figcaption class="text-center">One more Bootstrap experiment</figcaption>
                                         </figure>
@@ -427,7 +427,7 @@
                             <p></p>
                         </div>
                     </article>
-                    <div class="downArrow" id="hideTrigger6" ><i class="fa fa-chevron-up" aria-hidden="true"></i>
+                    <div class="downArrow" id="hideTrigger6"><i class="fa fa-chevron-up" aria-hidden="true"></i>
                     </div>
 
                     <article id="Recommend">
@@ -439,8 +439,8 @@
                                 <img src="img/thumb-up-filled-gesture.png" alt="thumb-up-filled-gesture">
                             </div>
                         </div>
-                            <h3>I'm recommend</h3>
-                            <div id="hide7">
+                        <h3>I'm recommend</h3>
+                        <div id="hide7">
                             <p>
                                 On the internet, there are a lot of resources and everyone can lost among them. I spent a lot of time before extracted something useful. Maybe some of this find be helpful for you to...</p>
                             <ul>
