--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                             <ul>
                                 <li><em>2013–2014</em> – <a href="http://katysha.com.ua/" target="_blank">Varenichnaya Katyusha LLC.</a>
                                 </li>
-                                <li><em>Position:</em> Chief marketing manager, marketing manager.</li>
+                                <li><em>Position:</em> Marketing manager.</li>
                             </ul>
                             <hr>
                             <ul>
@@ -390,7 +390,9 @@
                                             <a href="https://github.com/VDSnuff/KillClonesTabs" target="_blank">
                                                 <img class="img-responsive center-block" src="img/octopus.png" alt="Personal projects">
                                             </a>
-                                            <figcaption class="text-center">This extension compares opened browser tabs and highlight duplicates. Optionally it can close all duplicates tabs.</figcaption>
+                                            <figcaption class="text-center">This extension compares opened browser tabs and highlight duplicates. Optionally it can close all duplicates tabs.
+                                                <a target="_blank" href="https://chrome.google.com/webstore/detail/kill-the-clones/kboomnlecbmbikamlaaeabjacbbadojh?utm_source=chrome-app-launcher-info-dialog">See in Chrome web store</a>
+                                            </figcaption>
                                         </figure>
                                     </div>
                                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
@@ -417,7 +419,7 @@
                                         <h5><a href="https://github.com/VDSnuff/VKDownloader" target="_blank">VK Downloader</a></h5>
                                         <figure>
                                             <a href="https://github.com/VDSnuff/VKDownloader" target="_blank">
-                                                <img class="img-responsive center-block" src="img/download.png" alt="Personal projects">
+                                                <img class="img-responsive center-block" src="img/Microsoft_logo_(2012).svg" alt="Personal projects">
                                             </a>
                                             <figcaption class="text-center">The program that works with VK(social networking) API.</figcaption>
                                         </figure>
