Animation for Twitter button and adding spinner

--- a/Project_RandomQuoteMachine/RandomQuoteMachine.html
+++ b/Project_RandomQuoteMachine/RandomQuoteMachine.html
@@ -12,6 +12,8 @@
     <link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- My CSS -->
     <link href="css/mainCSS.css" rel="stylesheet">
+    <!-- font-awesome -->
+    <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -34,7 +36,7 @@
                 <p id="quote-title"></p>
             </div>
             <div class="col-xs-2 col-sm-2 col-md-2 col-lg-2" id="postTwitter">
-                <img src="img/twitter-logo-silhouette.svg" alt="TwitterLogo" />
+                <img id="tw" src="img/twitter-logo-silhouette.svg" alt="TwitterLogo" />
             </div>
         </div>
     </div>
