--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                                 <a href="http://getbootstrap.com/" target="_blank">
                                     <img src="img/Bootstrap_logo.svg" alt="Bootstrap logo">
                                 </a>
-                                 <a href="https://jquery.com/" target="_blank" style="width:90px;">
+                                 <a href="https://jquery.com/" target="_blank">
                                     <img src="img/JQuery_logo.svg" alt="JQuery logo">
                                 </a>
                             </div>
